# ConditionChain

./: README.md  pyproject.toml
cchain/core/: __init__.py  base_module.py  condition_chain.py  conditions.py
tests/core/: test_condition_chain.py
